--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/router": "^15.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
-  },
+    "zone.js": "~0.12.0",
+    "jquery":"3.3.1",
+    "bootstrap":"4.1.3"
+  },  
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.6",
     "@angular/cli": "~15.2.6",
